# ProjectileSimulator

./: .mypy.ini  .pytest.ini  ProjectileSimulator.py  README.md  TestProjectileSimulator.py  environment.py  generate_docs.sh  projectile.py  projectile_sim.py  pyproject.toml  test_projectile_sim.py
.github/workflows/: ci.yaml
docs/: ProjectileSimulator.html  environment.html  projectile.html  projectile_sim.html
tests/: generate_test_cases.py  test_projectile_sim.py
tools/: generate_docs.sh  run_mypy.sh
