[project]
    name = "projectilesim"
    version = "0.1.0"
    description = "Simulates projectile motion in different gravities and air densities."
    authors = [{name = "Jim Tooker", email = "none@me.com"}]
    readme = "README.md"
    requires-python = ">=3.10"
    dependencies = [
        "readchar",
        "vpython",
    ]

[project.urls]
    "Homepage" = "https://github.com/jim-tooker/projectilesim"

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "pdoc",
]
